@@ -1,5 +1,7 @@
 #VERSION 0.8.5#
 
+ - added special filters in Peak_Filters_Advanced and fixed method validate()
+
  - fixed minor bug in Peak_View_Render_Layouts::render()
 
  - fixed minor bug in method getFiles() from Peak_View_Helper_Debug
